classDiagram

    direction LR

    class AbstractInterface~TypeGet, TypePost, TypePut~ {
        <<Interface>>
        ... List(...)
        TypeGet Post(TypePost data)
        ... Get(...)
        ... Put(...)
        ... Delete(...)
    }

    class UsersInterface["&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UsersInterface&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"] {
        <<Interface>>
        ... List(...)
        UserGet Post(UserPost data)
        ... Get(...)
        ... Put(...)
        ... Delete(...)
    }

    class IssuesInterface["&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IssuesInterface&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"] {
        <<Interface>>
        ... List(...)
        IssueGet Post(IssuePost data)
        ... Get(...)
        ... Put(...)
        ... Delete(...)
    }

    class CommentsInterface["&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CommentsInterface&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"] {
        <<Interface>>
        ... List(...)
        CommentGet Post(CommentPost data)
        ... Get(...)
        ... Put(...)
        ... Delete(...)
    }
    
    AbstractInterface <|-- UsersInterface
    AbstractInterface <|-- IssuesInterface
    AbstractInterface <|-- CommentsInterface